Bug 145203 - EDITING:FIREBIRD cannot create a table
Summary: EDITING:FIREBIRD cannot create a table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: high major
Assignee: Julien Nabet
URL:
Whiteboard: target:7.3.0
Keywords: bibisectNotNeeded, regression
Depends on:
Blocks:
 
Reported: 2021-10-18 14:04 UTC by jcsanz
Modified: 2021-10-19 21:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jcsanz 2021-10-18 14:04:32 UTC
You cannot create a table. When opening the design view, when creating a field, the only field type available is "OTHER". If you scroll down the list of field types it is empty. If you try to save the table it gives an error.
It is also not possible to create the table with the table creation wizard, because clicking on it does not work.

Steps to reproduce it:
1. Open Base
2. Select "Create a new database", in "Embedded database", select "Firebird Embedded".
3. Clic "Finish" and give a name to the new .odb file
4. After the file is open, clic on "Create table in design view"
5. Write something in "Field name", in "Field type" apear "OTHER"
6. Try to select a "Field type", the list is empty.
7. Try to save the table without index, gives an error: 
    firebird_sdbc error:
    *Dynamic SQL Error
    *SQL error code = -104
    *Token unknown - line 1, column 29
    *)
    caused by
    'isc_dsql_prepare'

The error is also present if create a new file via "Firebird external" and if connect to an exiting .fdb file.

Also present if connect to a Firebird server database following the next stepts:
1. Open Base
2. Select "Connect to an existing database", in the list select "Firebird External"
3. Clic "Next"
4. In the text box write the connection string, for example, "localhost:employee" (employee is a registered database).
5. Clic "Next"
6. Clic on "Password requiered". Check connection if you want.
7. Clic "Finish"
8. Give a name to the .odf file
9. Write user and password to open the database
10. The database opens correctly
11. After the file is open, clic on "Create table in design view"
12. Write something in "Field name", in "Field type" apear "OTHER"
13. Try to select a "Field type", the list is empty.
14. Try to save the table without index, gives an error

If the database has tables an you try to edit them, in the "Field type" it is shown "OTHER" and the dropdown is empty, like when try to create.

Tested with:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7a001d3706bee453db46fb38c80c17bb84fda4af
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: threaded

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 43a9bf11203ed92096af34ab828501e0218832c7
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

This error WAS NOT present on:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 93115d2c54d645bcf2f80fde325e3ede39dee4d5
CPU threads: 4; OS: Windows 10.0 Build 19043; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL
Comment 1 Julien Nabet 2021-10-18 18:38:18 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I don't reproduce this with LO Debian package 7.2.1
Comment 2 Julien Nabet 2021-10-18 20:01:34 UTC
Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=1cf57765dd9a66982ecf9cd33687005a70c70c3f
author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-10-08 09:16:06 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2021-10-08 21:23:59 +0200
commit 1cf57765dd9a66982ecf9cd33687005a70c70c3f (patch)
tree c1658b2df36e37bae056cbfc73e6cc6f652c45cf
parent 36d43d4637ed6c1666617ac2d87f738bc34455af (diff)
loplugin:moveparam in connectivity
Comment 3 Julien Nabet 2021-10-18 20:14:41 UTC
I gave a try with:
https://gerrit.libreoffice.org/c/core/+/123787
Comment 4 Commit Notification 2021-10-19 21:39:11 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5b20bb65363812388123d36f741e47b6195dde6b

tdf#145203: FIREBIRD cannot create a table

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.