tdf#145203: FIREBIRD cannot create a table

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=1cf57765dd9a66982ecf9cd33687005a70c70c3f
2021-10-08
loplugin:moveparam in connectivity

Change-Id: Iec0fa1597e63d42ee3a905bf55eff798b3f46177