connectivity/source/drivers/firebird/DatabaseMetaData.cxx
@@ -1026,7 +1026,7 @@ uno::Reference< XResultSet > SAL_CALL ODatabaseMetaData::getTypeInfo()
         tmp.push_back(aRow);
         return tmp;
     }();
-    pResultSet->setRows(std::move(aResults));
+    pResultSet->setRows(ODatabaseMetaDataResultSet::ORows(aResults));
     return pResultSet;
 }
 
